<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">


        <item
            android:id="@+id/storage"
            android:icon="@drawable/ic_sd_storage_grey_700_24dp"
            android:title="@string/sdcard" />

    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">


        <item
            android:id="@+id/dcim"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/dcim" />
        <item
            android:id="@+id/download"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/download" />
        <item
            android:id="@+id/movies"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/movie" />
        <item
            android:id="@+id/music"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/music" />
        <item
            android:id="@+id/picture"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/picture" />

    </group>



</menu>