<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/paste"
        android:title="@string/paste"
        android:icon="@drawable/ic_content_paste_white_24dp"
         />
    <item
        android:id="@+id/move"
        android:title="@string/CutToMove"
        android:icon="@drawable/ic_content_paste_white_24dp"
        />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always" />
    <item android:id="@+id/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_white_24dp"/>

</menu>